--- a/package.json
+++ b/package.json
@@ -5,31 +5,39 @@
   "engines": {
     "node": ">=12.10.0"
   },
+  "scripts": {
+    "lint": "eslint './**/*.{js,jsx}' --fix"
+  },
   "author": "Jocelyn Badgley <joc@twipped.com> (http://twipped.com)",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "~7.12.10",
-    "@babel/node": "~7.12.10",
-    "@babel/preset-env": "~7.12.11",
-    "babel-eslint": "~10.1.0",
-    "babel-node": "0.0.1-security",
-    "eslint": "~7.18.0",
-    "eslint-config-twipped": "~4.0.0",
+    "@babel/preset-env": "~7.16.8",
+    "@babel/preset-react": "~7.16.7",
+    "eslint": "~8.7.0",
+    "eslint-config-twipped": "~6.1.0",
+    "eslint-plugin-import": "~2.25.4",
     "eslint-plugin-node": "~11.1.0",
-    "eslint-plugin-promise": "~4.2.1",
-    "rollup": "~2.38.0",
-    "rollup-plugin-babel": "~4.4.0",
-    "rollup-plugin-banner": "~0.2.1",
-    "rollup-plugin-terser": "~7.0.2"
+    "eslint-plugin-promise": "~6.0.0",
+    "eslint-plugin-react": "~7.28.0"
   },
   "files": [
-    "dist",
     "src",
     "CHANGELOG.md",
     "LICENSE.txt",
     "README.md"
   ],
   "dependencies": {
-    "@twipped/utils": "~4.2.0"
+    "@twipped/utils": "~5.0.2"
+  },
+  "peerDependencies": {
+    "prop-types": ">=15",
+    "react": ">=17"
+  },
+  "optionalDependencies": {
+    "bezier-easing": "~2.1.0",
+    "date-fns": "~2.28.0",
+    "mobx": ">=6.3",
+    "mobx-react-lite": "~3.2.3",
+    "react-dom": ">=17"
   }
 }
