--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@twipped/react-utils",
   "version": "2.0.0",
-  "description": "A collection of my frequently used react hooks and components",
+  "description": "A collection of my frequently used react tools and components",
   "engines": {
-    "node": ">=14"
+    "node": ">=14.13"
   },
   "scripts": {
     "lint": "eslint './**/*.{js,jsx}' --fix"
@@ -35,15 +35,16 @@
     "react": ">=17"
   },
   "optionalDependencies": {
-    "bezier-easing": "~2.1.0",
-    "date-fns": "~2.28.0",
+    "bezier-easing": ">=2.1.0",
+    "date-fns": ">=2.20.0",
     "mobx": ">=6.3",
-    "mobx-react-lite": "~3.2.3",
+    "mobx-react-lite": ">=3.2.0",
     "react-dom": ">=17"
   },
   "main": "./index.js",
   "exports": {
     ".": "./index.js",
     "./*": "./src/*.js",
+    "./quick/*": "./src/quick/*.js"
   }
 }
