Added repo and publishConfig

--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
   },
   "author": "Jocelyn Badgley <joc@twipped.com> (http://twipped.com)",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Twipped/hooks"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "@babel/preset-env": "~7.16.8",
     "@babel/preset-react": "~7.16.7",
